; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_toplev.c_get_src_pwd.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_toplev.c_get_src_pwd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@src_pwd = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [2 x i8] c".\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_src_pwd() #0 {
  %1 = load i8*, i8** @src_pwd, align 8
  %2 = icmp ne i8* %1, null
  br i1 %2, label %9, label %3

3:                                                ; preds = %0
  %4 = call i8* (...) @getpwd()
  store i8* %4, i8** @src_pwd, align 8
  %5 = load i8*, i8** @src_pwd, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %3
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** @src_pwd, align 8
  br label %8

8:                                                ; preds = %7, %3
  br label %9

9:                                                ; preds = %8, %0
  %10 = load i8*, i8** @src_pwd, align 8
  ret i8* %10
}

declare dso_local i8* @getpwd(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
